# Federated-Learning-Simulation

V1/Refactored/fedavg/: pyproject.toml
V1/Refactored/fedavg/fedavg/: client_app.py  server_app.py
V1/Refactored/fednova/: pyproject.toml
V1/Refactored/fednova/fednova/: client_app.py
V1/Refactored/fedprox/: pyproject.toml
V1/Refactored/fedprox/fedprox/: client_app.py
V1/Refactored/fedsgd/fedsgd/: client_app.py  server_app.py
V1/Refactored/fl_common/: pyproject.toml
V1/Refactored/fl_common/fl_common/: metrics.py  server_runner.py  strategy.py
V10/Refactored/fedavg/: pyproject.toml
V10/Refactored/fednova/: pyproject.toml
V10/Refactored/fednova/fednova/: client_app.py
V10/Refactored/fl_common/fl_common/: client_helpers.py  server_runner.py
V11/Refactored/fedavg/fedavg/: client_app.py
V11/Refactored/fednova/: pyproject.toml
V11/Refactored/fedsgd/fedsgd/: server_app.py
V11/Refactored/fl_common/fl_common/: client_helpers.py  data.py  strategy.py  training.py
V12/Refactored/fednova/fednova/: client_app.py
V12/Refactored/fl_common/fl_common/: training.py
V12/Refactored/scaffold/: pyproject.toml
V12/Refactored/scaffold/scaffold/: client_app.py  server_app.py
V13/Refactored/fednova/fednova/: server_app.py
V13/Refactored/fedprox/fedprox/: client_app.py
V13/Refactored/fedsgd/: pyproject.toml
V13/Refactored/fl_common/fl_common/: strategy.py
V14/Refactored/: plot_results.py
V14/Refactored/fedprox/: pyproject.toml
V14/Refactored/fl_common/fl_common/: server_runner.py  strategy.py  training.py
V15/Refactored/: plot_results.py
V15/Refactored/fairfed/: pyproject.toml
V15/Refactored/fairfed/fairfed/: server_app.py
V15/Refactored/fednova/: pyproject.toml
V15/Refactored/fl_common/fl_common/: client_helpers.py  server_runner.py  strategy.py
V15/Refactored/qfedavg/: pyproject.toml
V15/Refactored/qfedavg/qfedavg/: client_app.py
V15/Refactored/scaffold/: pyproject.toml
V15/Refactored/scaffold/scaffold/: client_app.py  server_app.py
V17/Refactored/: plot_results.py  run_all.ps1
V17/Refactored/befl/: pyproject.toml
V17/Refactored/befl/befl/: client_app.py  server_app.py
V17/Refactored/fairfed/: pyproject.toml
V17/Refactored/fairfed/fairfed/: client_app.py
V17/Refactored/fedavg/: pyproject.toml
V17/Refactored/fednova/fednova/: client_app.py
V17/Refactored/fedprox/: pyproject.toml
V17/Refactored/fedprox/fedprox/: server_app.py
V17/Refactored/fedsgd/fedsgd/: client_app.py
V17/Refactored/fl_common/fl_common/: data.py  energy.py  metrics.py  server_runner.py  strategy.py  training.py
V17/Refactored/qfedavg/: pyproject.toml
V17/Refactored/qfedavg/qfedavg/: server_app.py
V17/Refactored/scaffold/scaffold/: client_app.py  server_app.py
V2/Refactored/: plot_results.py
V2/Refactored/fedavg/fedavg/: client_app.py  server_app.py
V2/Refactored/fedsgd/: pyproject.toml
V2/Refactored/fedsgd/fedsgd/: client_app.py
V2/Refactored/fl_common/fl_common/: __init__.py  client_helpers.py  metrics.py  server_runner.py  strategy.py
V3/Refactored/fedavg/fedavg/: client_app.py
V3/Refactored/fednova/fednova/: client_app.py  server_app.py
V3/Refactored/fedprox/fedprox/: client_app.py  server_app.py
V3/Refactored/fedsgd/: pyproject.toml
V3/Refactored/fedsgd/fedsgd/: client_app.py
V3/Refactored/fl_common/fl_common/: client_helpers.py  metrics.py  server_runner.py  strategy.py  training.py
V4/Refactored/: plot_results.py
V4/Refactored/fedavg/: pyproject.toml
V4/Refactored/fednova/: pyproject.toml
V4/Refactored/fednova/fednova/: client_app.py
V4/Refactored/fedprox/: pyproject.toml
V4/Refactored/fedprox/fedprox/: client_app.py
V4/Refactored/fl_common/fl_common/: client_helpers.py  data.py  metrics.py  server_runner.py
V5/Refactored/fedavg/: pyproject.toml
V5/Refactored/fedavg/fedavg/: client_app.py
V5/Refactored/fednova/: pyproject.toml
V5/Refactored/fednova/fednova/: client_app.py
V5/Refactored/fedprox/: pyproject.toml
V5/Refactored/fedprox/fedprox/: client_app.py
V5/Refactored/fedsgd/: pyproject.toml
V5/Refactored/fedsgd/fedsgd/: client_app.py
V5/Refactored/fl_common/fl_common/: client_helpers.py  server_runner.py
V6/Refactored/fedavg/fedavg/: client_app.py
V6/Refactored/fednova/: pyproject.toml
V6/Refactored/fednova/fednova/: server_app.py
V6/Refactored/fedprox/: pyproject.toml
V6/Refactored/fl_common/fl_common/: client_helpers.py  metrics.py  server_runner.py  straggler.py
V7/Refactored/fedavg/: pyproject.toml
V7/Refactored/fednova/fednova/: client_app.py
V7/Refactored/fedprox/fedprox/: client_app.py
V7/Refactored/fedsgd/: pyproject.toml
V7/Refactored/fedsgd/fedsgd/: client_app.py
V7/Refactored/fl_common/fl_common/: client_helpers.py  data.py  strategy.py  training.py
V8/Refactored/: plot_results.py
V8/Refactored/fedavg/: pyproject.toml
V8/Refactored/fedavg/fedavg/: client_app.py
V8/Refactored/fednova/: pyproject.toml
V8/Refactored/fednova/fednova/: client_app.py
V8/Refactored/fedprox/: pyproject.toml
V8/Refactored/fedprox/fedprox/: client_app.py
V8/Refactored/fedsgd/: pyproject.toml
V8/Refactored/fl_common/fl_common/: client_helpers.py  server_runner.py
V9/Refactored/: inspect_partitions.py
V9/Refactored/fedavg/: pyproject.toml
V9/Refactored/fedavg/fedavg/: client_app.py
V9/Refactored/fednova/: pyproject.toml
V9/Refactored/fednova/fednova/: client_app.py  server_app.py
V9/Refactored/fedprox/: pyproject.toml
V9/Refactored/fedprox/fedprox/: client_app.py
V9/Refactored/fedsgd/: pyproject.toml
V9/Refactored/fedsgd/fedsgd/: client_app.py
V9/Refactored/fl_common/fl_common/: client_helpers.py  data.py  energy.py  server_runner.py  strategy.py  training.py
