[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scaffold"
version = "1.0.0"
description = "SCAFFOLD (Karimireddy et al. 2020) avec control variates pour reduction de variance non-IID"
license = "Apache-2.0"
dependencies = [
    "fl_common>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["scaffold"]

[tool.flwr.app]
publisher = "local"

[tool.flwr.app.components]
serverapp = "scaffold.server_app:app"
clientapp = "scaffold.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
local-epochs = 2
learning-rate = 0.01
batch-size = 32
num-clients = 10
partitioning = "noniid"
dirichlet-alpha = 0.3
data-heterogeneity = 0
epochs-heterogeneity = 0
early-stopping-patience = 0
early-stopping-min-delta = 0.001
straggler-sim = 0
round-deadline-s = 0.0
# Compression / quantification
comm-size-ratio = 1.0
sim-model-mb = 0.0
# Momentum SGD. SCAFFOLD est INSTABLE avec momentum > 0 (divergence du training)
# car la correction (c_global - c_local) s'accumule dans le buffer momentum.
# DEFAULT = 0.0. Pour comparer fairement avec FedAvg : mets aussi momentum=0.0
# dans le run-config de fedavg.
momentum = 0.0
seed = -1


#######################################################################
# CONFIGURATION MIGRATION NOTICE:
#
# What was previously called "federation config" for SuperLink
# connections in pyproject.toml has been renamed and moved.
#
# These settings are now **SuperLink connection configuration**
# and are defined in the Flower configuration file.
#
# The entries below are commented out intentionally and are kept
# only as a migration reference.
#
# Docs: https://flower.ai/docs/framework/ref-flower-configuration.html
#######################################################################

# [tool.flwr.federations]
# default = "local-sim"

# [tool.flwr.federations.local-sim]
# options.num-supernodes = 10
