[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qfedavg"
version = "1.0.0"
description = "q-FedAvg : Fair Federated Learning pondere par loss^q (Li, Sanjabi, Smith 2019)"
license = "Apache-2.0"
dependencies = [
    "fl_common>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["qfedavg"]

[tool.flwr.app]
publisher = "local"

[tool.flwr.app.components]
serverapp = "qfedavg.server_app:app"
clientapp = "qfedavg.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
local-epochs = 2
learning-rate = 0.01
batch-size = 32
num-clients = 10
partitioning = "noniid"
dirichlet-alpha = 0.3
data-heterogeneity = 0
epochs-heterogeneity = 0
early-stopping-patience = 0
early-stopping-min-delta = 0.001
straggler-sim = 0
round-deadline-s = 0.0
comm-size-ratio = 1.0
sim-model-mb = 0.0
# Momentum SGD aligne sur 0.0 (theorie-correcte vanilla SGD) pour comparer
# fairement avec FedNova / SCAFFOLD qui exigent momentum=0.
momentum = 0.0
seed = -1
# q-FedAvg parameters
# q = exposant fairness. 0 = FedAvg, 1.0 = standard, 5.0 = forte fairness.
qfedavg-q = 1.0
# L = constante Lipschitz approx (typiquement 1/lr ou ~1.0).
qfedavg-L = 1.0


#######################################################################
# CONFIGURATION MIGRATION NOTICE:
#
# What was previously called "federation config" for SuperLink
# connections in pyproject.toml has been renamed and moved.
#
# These settings are now **SuperLink connection configuration**
# and are defined in the Flower configuration file.
#
# The entries below are commented out intentionally and are kept
# only as a migration reference.
#
# Docs: https://flower.ai/docs/framework/ref-flower-configuration.html
#######################################################################

# [tool.flwr.federations]
# default = "local-sim"

# [tool.flwr.federations.local-sim]
# options.num-supernodes = 10
