[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedprox"
version = "1.0.0"
description = "FedProx (terme proximal) avec partitionnement IID ou non-IID (Dirichlet) configurable"
license = "Apache-2.0"
dependencies = [
    "fl_common>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fedprox"]

[tool.flwr.app]
publisher = "local"

[tool.flwr.app.components]
serverapp = "fedprox.server_app:app"
clientapp = "fedprox.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
local-epochs = 2
learning-rate = 0.01
batch-size = 32
num-clients = 10
mu = 0.01
partitioning = "noniid"
dirichlet-alpha = 0.3
data-heterogeneity = 0
epochs-heterogeneity = 0
early-stopping-patience = 0
early-stopping-min-delta = 0.001
straggler-sim = 0
round-deadline-s = 0.0
# Taille effective uploadee/downloadee apres compression / quantification.
# 1.0 = no compression, 0.25 = quant 8-bit, 0.125 = 4-bit, 0.1 = 90% sparse, etc.
comm-size-ratio = 1.0


#######################################################################
# CONFIGURATION MIGRATION NOTICE:
#
# What was previously called "federation config" for SuperLink
# connections in pyproject.toml has been renamed and moved.
#
# These settings are now **SuperLink connection configuration**
# and are defined in the Flower configuration file.
#
# The entries below are commented out intentionally and are kept
# only as a migration reference.
#
# Docs: https://flower.ai/docs/framework/ref-flower-configuration.html
#######################################################################

# [tool.flwr.federations]
# default = "local-sim"

# [tool.flwr.federations.local-sim]
# options.num-supernodes = 10
